<resources>
    <string name="app_name">邮资讯</string>
    <string name="signin">注册</string>
    <string name="inputStudentCode">输入学号</string>
    <string name="setCode">设置密码</string>
    <string name="forgetCode">忘记密码</string>
    <string name="login">登录</string>
    <string name="clearNews">详情</string>
    <string name="avatar_behavior" translatable="false">
        com.example.think.younews.AvatarBehavior</string>
    <string name="edit_send">编辑发送</string>
    <string name="send">发送</string>
    <string name="input">请输入...</string>

    <string name="news">11月04日 14:45 2016:第二届创联赛全国四强夺得赛区冠军 第四届全国高校联赛重庆
        省冠军第四届全国高校联赛西南亚军 巴渝杯重庆总冠军IGL英雄联盟高校联赛重庆冠军西部冠军 代表中国
        高校赴韩参加了亚洲交流赛。 电竞社</string>
    <string name="large_text">
  "\n\n\n\重庆邮电大学关于申报重庆市高水平新工科建设高校的通知\n\n\n\n"

       校属各单位：

根据《重庆市教育委员会关于开展高水平新工科高校建设工作的通知》（渝教高发【2018】17号）文件精神，我校将积极组织申报工作，现将有关事宜通知如下：

一、学校成立专项工作组

（一）工作组构成

组长：林金朝

副组长：李方伟

成员：1.各学院院长；

2.教务处、人事处、学科办、科技处、信息化办、国际处、产学研办、资产处、学生处、团委主要负责人；

3.胡学刚、王桂林、罗华、熊余、唐诚、舒强

（二）工作组任务

1.撰写《重庆市高水平新工科建设高校建设方案》；

2.撰写《重庆市高水平新工科建设高校申报书》；

3.拟定学校推荐公文。


        "\n\n"

       二、工作流程

1.由专项工作组研究确定具体建设任务，发布通知，统一向学院布置具体建设任务；

2. 学院按要求填写本学院建设任务书和佐证材料，报申报工作组；

3.工作组汇总学院材料，分别发给各相关归口管理单位整理、修改和审核；

4. 归口管理单位按照任务归属（详见后的工作安排）认真审核各学院的建设方案，填报本归口管理单位的建设任务情况表；

5.工作组在前面工作的基础上撰写《重庆邮电大学高水平新工科高校建设方案》，《重庆邮电大学高水平新工科高校申报书》以及推荐公文。\n\n"

        "\n\n"

      三、学院任务

相关学院结合自身实际情况，在学校给出的参考任务中增减和修改具体项目，确定每个项目具体建设任务、层次、数量目标以及建设所需经费，
        并按要求填写建设方案表（见附件1）。
\n\n"

        "\n\n"

       四、归口管理单位任务

（一）工作分工

Ⅰ教务处

1.  新专业立项调研分析及报告

2.  新建新工科专业

3.  已有工科专业改造

4.  重要公共基础课程建设

5.  专业认证

6.  一流专业

7.  特色专业

8.  实验室设备更新

9.  新建实践教学平台

10.      卓越工程师项目

11.      与行业、企业、园区共建产教协同育人机制

12.      专业教学质量标准

13.      共建课程 　 　 　 　

14.      联合编写教材　

15.      共建生产性实训基地

16.      教学资源

17.      精品在线开放课程

18.      规划教材　

19.      虚拟仿真实验教学中心　

20.      新工科课程开发

21.      教学方法 小班教学、个性化教学试点

22.      教学质量监控中心

23.      专业评估

Ⅱ、人事处

24.      共同制定职业岗位标准　

25.      共建培训中心

26.      师资队伍 教师挂职

27.      教师进修

28.      教师发展中心建设投入（学习资源、技能训练、教师指导等）

29.      教学团队

30.      教学名师

31.      高层次人才引进与培育

32.      博士学位教师科研启动费

Ⅲ、双创学院

33.      新工科特色工程中心 创新创业训练计划

34.      “互联网+”比赛及专业性大赛

35.      创业导师聘请　

36.      创客空间

37.      孵化基地　

Ⅳ、国际处

38.      国际交流与重大项目合作

39.      国际合作专业项目建设

40.      学生海外访学、深造、交换

Ⅴ、信息化办

41.      教学信息化平台（含校园试卷评阅与教学档案管理系统等）

42.      智慧教学条件建设

Ⅵ、科技处

43.      共建技术研发中心

44.      重点实验室

Ⅶ、产学研办

45.      与园区、行业、企业合作洽谈    　 　 　

46.      与行业、企业、园区共建专业

Ⅷ、资产处牵头整理的建设项目

47.      向行业企业购买教学服务

Ⅸ、学科办

48.      学科评估（新工科相关学科）

Ⅹ、学生处、团委

49.      素质拓展训练（四个一工程等）

注：上面有下划线的项目是学校增加的，其余项目由市教委提供。\n\n"

        "\n\n"

       （二）工作说明

项目牵头整理审核的管理单位，按照市教委《建设高水平新工科高校》的总体要求和我校建设高水平新工科高校的总目标，从项目符合性、必要性、可行性等方面认真论证学院提出的建设任务，必要时可以添加、删除或修改任务，并在规定时间内报送本归口单位对应的建设项目表（详见附件2）。

注意：1.新工科的项目选取要首先围绕市教委提出的高水平新工科高校主要建设内容与任务要点来开展（相关要点见附件3）；2.建设新工科要体现新理念、新结构、新模式、新质量、新体系。3.主要内容举例：建设新工科专业，改造传统专业；师资队伍建设、教学资源建设、创新能力培养；注重学科交叉、文理渗透，注重产教、科教融合；校企协同育人；培养学生家国情怀、国际化视野等。

五、工作进度安排

1.  9日下午4点召开专题会议，布置工作任务。会议请林校长主持，参会人员有：李校长及新工科工作组全体成员。

2.  13日上午11点前，学院报送本单位《学院高水平新工科建设方案》纸质版1份和电子版给教务处王桂林老师（E-mail: wangguilin@cqupt.edu.cn）。

3.  13日下午5点前，工作组汇总学院材料后，立即转发给相关牵头整理和审核单位。

4.  15日上午11点前，归口管理单位报送本单位《牵头审核的高水平新工科建设方案》到教务处王桂林老师处，纸质版1份，电子版发到邮箱：wangguilin@cqupt.edu.cn。

5.  19日下午5点前，工作组完成《申报书》、《学校建设方案》初稿撰写，相关学院报支撑材料到教务处（wangguilin@cqupt.edu.cn）。

6.  20日，学校组织召开专题会审议报送方案。

7.  21-22日，工作组组织修改，并在22日下午3点前报送市教委高教处。

附件1. 学院高水平新工科建设方案

附件2. 牵头单位审核的高水平新工科建设方案

附件3. 《重庆市教育委员会关于开展高水平新工科高校建设工作的通知》（渝教高发【2018】17号）\n\n"

        "\n\n"


                                                             教务处

                                      2018.11.9\n\n"














    </string>
</resources>
